--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,5 +1,5 @@
-@import '~normalize.css';
-@import 'colors';
-@import 'sizes';
-@import 'typography';
-@import 'global';
+//@import '~normalize.css';
+//@import 'colors';
+//@import 'sizes';
+//@import 'typography';
+//@import 'global';
